--- a/pom.xml
+++ b/pom.xml
@@ -39,25 +39,12 @@
 		</dependency>
 		
 		<dependency>
-	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-starter-data-jpa</artifactId>
+	        <groupId>org.projectlombok</groupId>
+	        <artifactId>lombok</artifactId>
+	        <version>1.18.10</version>
+	        <scope>provided</scope>
     	</dependency>
-	    <dependency>
-	        <groupId>com.h2database</groupId>
-	        <artifactId>h2</artifactId>
-	    </dependency> 
-	    <dependency>
-		    <groupId>org.spockframework</groupId>
-		    <artifactId>spock-core</artifactId>
-		    <version>1.0-groovy-2.4</version>
-		    <scope>test</scope>
-		</dependency>
-		<dependency>
-		    <groupId>org.codehaus.groovy</groupId>
-		    <artifactId>groovy-all</artifactId>
-		    <version>2.4.7</version>
-		    <scope>test</scope>
-		</dependency>
+    	
 	</dependencies>
 
 	<build>
@@ -66,19 +53,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-			    <groupId>org.codehaus.gmavenplus</groupId>
-			    <artifactId>gmavenplus-plugin</artifactId>
-			    <version>1.5</version>
-			    <executions>
-			        <execution>
-			            <goals>
-			                <goal>compile</goal>
-			                <goal>testCompile</goal>
-			            </goals>
-			        </execution>
-			     </executions>
 			</plugin>
 		</plugins>
 		 </pluginManagement>
